fixed footer, fixed home page card spacing w/ footer, fixed scrolling on sources, external pages open in new tab, added x button to nutella

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,7 @@
 
 html {
   font-size: 1rem;
+  scroll-behavior: smooth;
 }
 
 @include media-breakpoint-up(sm) {
@@ -27,6 +28,21 @@ html {
   html {
     font-size: 1.3rem;
   }
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+  border: none;
+}
+
+.footer {
+  padding: 2.5rem 0;
+  color: #999;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: .05rem solid #e5e5e5;
 }
 
 .whole-screen-container {
@@ -111,11 +127,28 @@ html {
   opacity: 1;
 }
 
-.card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
-  border: none;
+.floating {
+  position: fixed;
+  top: 5px;
+  left: 15px;
+  z-index: 5;
+}
+
+.goHomePopover {
+  color: #999;
+  background-color: #424141;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
 }
 
 // Utility classes
